syntax = "proto3";

package statsig_forward_proxy;

service StatsigForwardProxy {
    rpc getConfigSpec (ConfigSpecRequest) returns (ConfigSpecResponse);
}

message ConfigSpecRequest {
    string sdkKey = 1;
    optional uint64 sinceTime = 12;
}

message ConfigSpecResponse {
    string spec = 1;
}
